2007-10-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-entity-regexp, w3m-entity-value): Accept case-insensitive
	numeric character references.

2007-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-message): Work with XEmacs.

2007-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el: Bind w3m-use-title-buffer-name (see the comment).

	* Makefile.in (very-slow): Add missing semicolon.

2007-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-lisp): Don't install ChangeLog~.

2007-10-02  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-show-error-information): When emacs-w3m cannot find
	host, set charset to us-ascii.

2007-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-show-decoded-url): Add entry for nikkei.co.jp.

2007-09-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-decode-buffer): Don't decode escaped URLs.
	(w3m-toggle-inline-images-internal): Escape non-ASCII characters in the
	URL of the image before retrieving it.

2007-09-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-safe-view-this-url): When a function which is
	specified by `w3m-goto-article-function' returns the
	`w3m-goto-url' symbol, it falls back to emacs-w3m displaying
	functions.  Cf. [emacs-w3m:09660]
	(w3m-goto-article-function): Its comment is updated to follow the
	above change.
	(w3m-entity-value, w3m-decode-entities-string): Change to save
	working memory.

2007-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-entity-regexp): Bind max-specpdl-size for old Emacsen.
	(w3m): Revert 2007-09-19 change.

2007-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* NEWS: New file.

2007-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-examine-command-line-args): Don't pass negative number to
	nthcdr.

	* w3m-session.el (w3m-session-save, w3m-session-select): Use mapc
	instead of mapcar.

2007-09-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Changes to stricten entities decoded by